--- a/pom.xml
+++ b/pom.xml
@@ -56,7 +56,7 @@
     <repositories>
         <repository>
             <id>papermc-repo</id>
-            <url>https://papermc.io/repo/repository/maven-public/</url>
+            <url>https://repo.papermc.io/repository/maven-public/</url>
         </repository>
         <repository>
             <id>sonatype</id>
@@ -72,7 +72,7 @@
         <dependency>
             <groupId>io.papermc.paper</groupId>
             <artifactId>paper-api</artifactId>
-            <version>1.19-R0.1-SNAPSHOT</version>
+            <version>1.21.1-R0.1-SNAPSHOT</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
@@ -82,15 +82,15 @@
             <scope>provided</scope>
         </dependency>
         <dependency>
-            <groupId>fr.iban</groupId>
-            <artifactId>CorePaper</artifactId>
-            <version>1.0</version>
+            <groupId>com.github.IbanEtchep.MSCore</groupId>
+            <artifactId>core-paper</artifactId>
+            <version>1.1.0</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
-            <groupId>fr.iban</groupId>
-            <artifactId>Lands</artifactId>
-            <version>1.0</version>
+            <groupId>com.github.IbanEtchep</groupId>
+            <artifactId>MSLands</artifactId>
+            <version>1.1.0</version>
             <scope>provided</scope>
         </dependency>
     </dependencies>
